manifests/base/deplyment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "82265635"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "82265635"
  template:
    metadata:
      labels:
        app: "82265635"
    spec:
      containers:
        - name: "82265635"
          image: cepgstapacr.azurecr.io/82265635
          ports:
            - containerPort: 8080
